# search-engine2

./: CMakeLists.txt  config.json  readme.txt  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp  test.cpp
